Fix heading too big

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
   }
 
   h2 {
-    @apply text-lg md:text-xl;
+    @apply text-lg;
   }
 }
 
